--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -41,4 +41,4 @@ jobs:
           export LD_LIBRARY_PATH=$GITHUB_WORKSPACE/libraries
           export CONCURRENCY=1
           mkdir -p ./libraries
-          go test -v -count=1
+          CGO_ENABLED=0 go test -v -count=1
