--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,7 +30,7 @@ jobs:
           fileName: "llama-*-bin-macos-arm64.zip"
           out-file-path: "lib"
           extract: true
-      - name: Move llama.cpp files to root directory
+      - name: Move llama.cpp files to libraries directory
         run: |
           mkdir -p ./libraries
           cp ./lib/build/bin/* ./libraries
