--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -41,4 +41,5 @@ jobs:
           export LD_LIBRARY_PATH=$GITHUB_WORKSPACE/libraries
           export CONCURRENCY=1
           export INSTALL_LLAMA=1
+          mkdir -p ./libraries
           CGO_ENABLED=0 go test -v -count=1
