--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -53,5 +53,6 @@ jobs:
       - name: Run unit tests
         run: |
           export LD_LIBRARY_PATH=$GITHUB_WORKSPACE/tests/libraries
-          export CONCURRENCY=1
+          export MODEL_INSTANCES=1
+          export GOROUTINES=1
           CGO_ENABLED=0 go test -v -count=1 ./tests
