--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -54,5 +54,6 @@ jobs:
         run: |
           export LD_LIBRARY_PATH=$GITHUB_WORKSPACE/tests/libraries
           export MODEL_INSTANCES=1
-          export GOROUTINES=1
+          export GOROUTINES=2
+          export RUN_IN_PARALLEL=1
           CGO_ENABLED=0 go test -v -count=1 ./tests
