--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -54,6 +54,7 @@ jobs:
           export GOROUTINES=1
           export RUN_IN_PARALLEL=0
           CGO_ENABLED=0 go test -v -count=1 ./sdk/security/auth
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/security
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/catalog
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/cache
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
