rate limiting implemented

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -71,9 +71,8 @@ jobs:
         run: |
           export GOROUTINES=1
           export RUN_IN_PARALLEL=0
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/security/auth
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/security
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/catalog
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/security/...
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/cache
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
