reorganizing project packages

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -73,9 +73,8 @@ jobs:
           export RUN_IN_PARALLEL=0
           CGO_ENABLED=0 go test -v -count=1 ./sdk/security/...
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/cache
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/...
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/...
       - name: Delete existing models cache
         if: github.ref == 'refs/heads/main' && steps.cache-models.outputs.cache-hit != 'true'
         env:
