--- a/cmd/server/api/frontends/bui/package.json
+++ b/cmd/server/api/frontends/bui/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/prismjs": "^1.26.5",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
