--- a/sdk/tools/catalog/test_data/image_text_to_text.yaml
+++ b/sdk/tools/catalog/test_data/image_text_to_text.yaml
@@ -10,9 +10,9 @@ models:
       models:
         - url: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q8_0.gguf
           size: 3.29 GiB
-      projs:
-        - url: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
-          size: 845 MiB
+      proj:
+        url: https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
+        size: 845 MiB
     capabilities:
       endpoint: chat_completion
       images: true
