--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -62,6 +62,7 @@ jobs:
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/...
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/...
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/api/services/kronk/tests
       - name: Run static analysis
         run: |
           CGO_ENABLED=0 go vet ./...
