--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -58,9 +58,11 @@ jobs:
         run: |
           export GOROUTINES=1
           export RUN_IN_PARALLEL=0
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/security/...
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
-          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/...
-          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/...
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/api/services/kronk/tests
       - name: Run static analysis
         run: |
