--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
@@ -13,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
+  test-sdk:
     runs-on: ubuntu-latest
     steps:
       - name: Free disk space
@@ -22,7 +21,6 @@ jobs:
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
           sudo rm -rf /opt/hostedtoolcache/CodeQL
-          df -h
       - name: Checkout
         uses: actions/checkout@v5
       - name: Install Go
@@ -35,14 +33,8 @@ jobs:
         with:
           path: ~/.kronk/models
           key: ${{ runner.os }}-models-v3
-      - name: Install tools
-        run: |
-          go install honnef.co/go/tools/cmd/staticcheck@latest
-          go install golang.org/x/vuln/cmd/govulncheck@latest
       - name: Install kronk command
-        run: |
-          cd cmd/kronk
-          go install .
+        run: go install ./cmd/kronk
       - name: Install Libs
         run: |
           mkdir -p $HOME/.kronk/libraries
@@ -54,21 +46,13 @@ jobs:
           kronk model pull --local https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q8_0.gguf https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
           kronk model pull --local https://huggingface.co/Qwen/Qwen3-8B-GGUF/resolve/main/Qwen3-8B-Q8_0.gguf
           kronk model pull --local https://huggingface.co/ggml-org/embeddinggemma-300m-qat-q8_0-GGUF/resolve/main/embeddinggemma-300m-qat-Q8_0.gguf
-      - name: Run unit tests
+      - name: Run SDK tests
         run: |
           export GOROUTINES=1
           export RUN_IN_PARALLEL=0
-          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
-          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/security/...
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
-          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/api/services/kronk/tests
-      - name: Run static analysis
-        run: |
-          CGO_ENABLED=0 go vet ./...
-          staticcheck -checks=all ./...
-          govulncheck ./...
       - name: Delete existing models cache
         if: github.ref == 'refs/heads/main' && steps.cache-models.outputs.cache-hit != 'true'
         env:
@@ -81,3 +65,76 @@ jobs:
         with:
           path: ~/.kronk/models
           key: ${{ runner.os }}-models-v3
+
+  test-server-sdk:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: "stable"
+      - name: Run server SDK tests
+        run: |
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/security/...
+
+  test-server-api:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: "stable"
+      - name: Restore models cache
+        id: cache-models
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/.kronk/models
+          key: ${{ runner.os }}-models-v3
+      - name: Install kronk command
+        run: go install ./cmd/kronk
+      - name: Install Libs
+        run: |
+          mkdir -p $HOME/.kronk/libraries
+          kronk libs --local
+      - name: Download test models
+        if: steps.cache-models.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p $HOME/.kronk/models
+          kronk model pull --local https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/Qwen2.5-VL-3B-Instruct-Q8_0.gguf https://huggingface.co/ggml-org/Qwen2.5-VL-3B-Instruct-GGUF/resolve/main/mmproj-Qwen2.5-VL-3B-Instruct-Q8_0.gguf
+          kronk model pull --local https://huggingface.co/Qwen/Qwen3-8B-GGUF/resolve/main/Qwen3-8B-Q8_0.gguf
+          kronk model pull --local https://huggingface.co/ggml-org/embeddinggemma-300m-qat-q8_0-GGUF/resolve/main/embeddinggemma-300m-qat-Q8_0.gguf
+      - name: Run server API tests
+        run: |
+          export GOROUTINES=1
+          export RUN_IN_PARALLEL=0
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/api/services/kronk/tests
+
+  static-analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: "stable"
+      - name: Install tools
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+      - name: Run static analysis
+        run: |
+          CGO_ENABLED=0 go vet ./...
+          staticcheck -checks=all ./...
+          govulncheck ./...
