--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -61,8 +61,7 @@ jobs:
           export RUN_IN_PARALLEL=0
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/security/...
-          # CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
-          # CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
+          CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
           CGO_ENABLED=0 go test -v -count=1 ./sdk/tools/...
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/api/services/kronk/tests
           CGO_ENABLED=0 go vet ./...
