--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,6 +14,7 @@ concurrency:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - name: Runner specs
         run: |
@@ -59,7 +60,7 @@ jobs:
         run: |
           export GOROUTINES=1
           export RUN_IN_PARALLEL=0
-          # CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
+          CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/cache
           CGO_ENABLED=0 go test -v -count=1 ./cmd/server/app/sdk/security/...
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/model
           CGO_ENABLED=0 go test -v -count=1 ./sdk/kronk/tests
