--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -1,17 +1,20 @@
 # example-model:
-#   context-window: 8192      # Max tokens model can process (default: 8192)
-#   nbatch: 2048              # Logical batch size (default: 2048)
-#   nubatch: 512              # Physical batch size for prompt ingestion (default: 512)
-#   nthreads: 0               # Threads for generation (0 = llama.cpp default)
-#   nthreads-batch: 0         # Threads for batch processing (0 = llama.cpp default)
-#   cache-type-k: q8_0        # KV cache key type: f32, f16, q8_0, q4_0, bf16, auto
-#   cache-type-v: q8_0        # KV cache value type: f32, f16, q8_0, q4_0, bf16, auto
-#   flash-attention: enabled  # Flash Attention: enabled, disabled, auto
-#   device: ""                # Device to use (run llama-bench --list-devices)
-#   nseq-max: 0               # Max parallel sequences for batched inference (0 = default)
-#   offload-kqv: true         # Offload KV cache to GPU (false = keep on CPU)
-#   op-offload: true          # Offload tensor operations to GPU (false = keep on CPU)
-#   ngpu-layers: 0            # GPU layers to offload (0 = all, -1 = none, N = specific count)
+#   context-window: 8192                 # Max tokens model can process (default: 8192)
+#   nbatch: 2048                         # Logical batch size (default: 2048)
+#   nubatch: 512                         # Physical batch size for prompt ingestion (default: 512)
+#   nthreads: 0                          # Threads for generation (0 = llama.cpp default)
+#   nthreads-batch: 0                    # Threads for batch processing (0 = llama.cpp default)
+#   cache-type-k: q8_0                   # KV cache key type: f32, f16, q8_0, q4_0, bf16, auto
+#   cache-type-v: q8_0                   # KV cache value type: f32, f16, q8_0, q4_0, bf16, auto
+#   flash-attention: enabled             # Flash Attention: enabled, disabled, auto
+#   device: ""                           # Device to use (run llama-bench --list-devices)
+#   nseq-max: 0                          # Max parallel sequences for batched inference (0 = default)
+#   offload-kqv: true                    # Offload KV cache to GPU (false = keep on CPU)
+#   op-offload: true                     # Offload tensor operations to GPU (false = keep on CPU)
+#   ngpu-layers: 0                       # GPU layers to offload (0 = all, -1 = none, N = specific count)
+#   split-mode: row                      # Multi-GPU split: none, layer, row (row recommended for MoE models)
+#   system-prompt-cache: false           # Cache first message KV state for reuse across requests (any role)
+#   system-prompt-cache-min-tokens: 100  # Min tokens before caching first message (default: 100)
 
 gpt-oss-20b-Q8_0:
   context-window: 98304
@@ -22,11 +25,11 @@ gpt-oss-20b-Q8_0:
   flash-attention: enabled
   nseq-max: 2
 Qwen3-8B-Q8_0:
-  context-window: 32768
-  cache-type-k: f16
-  cache-type-v: f16
-  nbatch: 1024
-  nubatch: 256
+  context-window: 40960
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
 Qwen2.5-VL-3B-Instruct-Q8_0:
@@ -54,6 +57,15 @@ Qwen3-Coder-30B-A3B-Instruct-Q8_0:
   context-window: 131072 # Model supports 262144, but w/ 128k
   nbatch: 1024
   nubatch: 256
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 2
+  system-prompt-cache: true # Turned on for use with Cline
+GLM-4.7-Flash-Q8_0:
+  context-window: 202752
+  nbatch: 2048
+  nubatch: 512
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
