--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -53,15 +53,14 @@ embeddinggemma-300m-qat-Q8_0:
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
-Qwen3-Coder-30B-A3B-Instruct-Q8_0: # These settings are for Cline
-  context-window: 131072 # Model supports 262144, but w/ 128k
+Qwen3-Coder-30B-A3B-Instruct-Q8_0:
+  context-window: 131072
   nbatch: 1024
   nubatch: 256
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
-  nseq-max: 1 # These settings are for Cline
-  system-prompt-cache: true # These settings are for Cline
+  nseq-max: 2
 GLM-4.7-Flash-Q8_0:
   context-window: 202752
   nbatch: 2048
@@ -78,3 +77,12 @@ Devstral-Small-2-24B-Instruct-2512-UD-Q8_K_XL:
   cache-type-v: q8_0
   flash-attention: enabled
   nseq-max: 2
+cerebras_qwen3-coder-reap-25b-a3b-q8_0:
+  context-window: 170000
+  nbatch: 2048
+  nubatch: 256
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 2
+  system-prompt-cache: true # This setting is for Cline
