--- a/sdk/tools/catalog/test_data/.index.yaml
+++ b/sdk/tools/catalog/test_data/.index.yaml
@@ -1,3 +1,4 @@
+bge-reranker-v2-m3-q8_0: rerank.yaml
 embeddinggemma-300m-qat-q8_0: embedding.yaml
 gpt-oss-20b-q8_0: text_generation.yaml
 qwen2-audio-7b.q8_0: audio_text_to_text.yaml
