--- a/zarf/kms/model_config.yaml
+++ b/zarf/kms/model_config.yaml
@@ -87,8 +87,10 @@
 # ==============================================================================
 # TEXT INFERENCE MODELS
 
-# This is a good model and has worked well Cline.
-# This configuration is for Agent use.
+# ------------------------------------------------------------------------------
+# Coding Agents and configured for Cline or Claude Code
+
+# This is a good model and has worked well Cline and is faster than the rest.
 GLM-4.7-Flash-UD-Q8_K_XL:
   context-window: 131072
   nbatch: 2048
@@ -99,8 +101,18 @@ GLM-4.7-Flash-UD-Q8_K_XL:
   nseq-max: 1
   first-message-cache: true
 
-# This is a good model and has worked ok Cline.
-# This configuration is for Agent use.
+# This is a good model and has worked well Cline.
+Qwen3-Coder-30B-A3B-Instruct-UD-Q8_K_XL:
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  flash-attention: enabled
+  nseq-max: 1
+  first-message-cache: true
+
+# This is a decent model and has worked ok with Cline.
 cerebras_qwen3-coder-reap-25b-a3b-q8_0:
   context-window: 131072
   nbatch: 2048
@@ -111,8 +123,19 @@ cerebras_qwen3-coder-reap-25b-a3b-q8_0:
   nseq-max: 1
   first-message-cache: true
 
-# This is a good model and has worked ok Cline.
-# This configuration is for Agent use.
+# This is a decent model and has worked ok with Cline.
+Qwen3-Coder-30B-A3B-Instruct-Q8_0:
+  context-window: 131072
+  nbatch: 2048
+  nubatch: 512
+  cache-type-k: q8_0
+  cache-type-v: q8_0
+  nseq-max: 1
+  first-message-cache: true
+
+# ------------------------------------------------------------------------------
+# Good Reasoning models, tooling support, don't use with Agents.
+
 gpt-oss-120b-F16:
   context-window: 131072
   nbatch: 2048
@@ -120,12 +143,10 @@ gpt-oss-120b-F16:
   cache-type-k: q8_0
   cache-type-v: q8_0
   flash-attention: enabled
-  nseq-max: 1
-  first-message-cache: true
+  nseq-max: 2
 
-# This model has not been as good as cerebras_qwen3-coder-reap-25b-a3b-q8_0
-Qwen3-Coder-30B-A3B-Instruct-Q8_0:
-  context-window: 131072
+gpt-oss-20b-Q8_0:
+  context-window: 98304
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
@@ -143,19 +164,12 @@ Qwen3-8B-Q8_0:
   flash-attention: enabled
   nseq-max: 2
 
+# ------------------------------------------------------------------------------
+# Non-Reasoning models, tooling support, don't use with Agents.
+
 # Model runs slow and haven't tested it too much.
 GLM-4.7-Flash-Q8_0:
   context-window: 131072
-  nbatch: 2048
-  nubatch: 512
-  cache-type-k: q8_0
-  cache-type-v: q8_0
-  flash-attention: enabled
-  nseq-max: 2
-
-# Can't get this model to behave with any of the Agents.
-gpt-oss-20b-Q8_0:
-  context-window: 98304
   nbatch: 2048
   nubatch: 512
   cache-type-k: q8_0
